# rag-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/chunking/: paragraph_chunker.py
core/containers/: app_container.py
core/embeddings/: embedding_service.py  gecko_mock_service.py  sentence_transformer_service.py
core/llm/: llm_client.py  vertex_generative_client.py  vertex_generative_mock.py
core/utils/: logger.py
core/vector_store/: chroma_store.py  models.py  vector_store.py
data/corpus/: benchmark_queries.json  technical_paragraphs.json
docs/: architecture.md  retrieval_benchmark.json  retrieval_benchmark.md
src/rag/: cli.py
src/rag/app/: exception_handlers.py  server.py
src/rag/app/configurations/: rag_configurations.py
src/rag/app/constants/: strategy_constants.py
src/rag/app/controller/: rag_controller.py
src/rag/app/dependencies/: container_dependency.py
src/rag/app/dto/: rag_dto.py
src/rag/app/services/: ingestion_service.py  query_expansion_service.py  retrieval_service.py  retrieval_strategy.py
src/rag/benchmarks/: __main__.py  corpus_loader.py  metrics.py  reporting.py  runner.py
tests/: conftest.py
tests/api/: test_rag_controller.py
tests/integration/: test_benchmark_pipeline.py
tests/unit/: test_chroma_store.py  test_gecko_mock_service.py  test_metrics.py  test_paragraph_chunker.py  test_query_expansion_service.py  test_retrieval_strategy.py
