[project]
name = "rag-service"
version = "0.1.0"
description = "Context-Aware Retrieval Engine: local RAG pipeline with Raw vs. AI-Enhanced (query expansion) retrieval benchmarking."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "vsuman-ai" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.5",
    "numpy>=1.26.0",
    "dependency-injector>=4.42.0",
    "loguru>=0.7.2",
    "typer>=0.12.3",
]

[project.optional-dependencies]
vertex = [
    "google-cloud-aiplatform>=1.60.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-requests>=2.32.0",
]

[project.scripts]
rag-service = "rag.app.server:main"
rag-benchmark = "rag.benchmarks.__main__:main"
rag-ingest = "rag.cli:ingest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Two installable packages live in this repo:
#   * ``core`` -- framework-agnostic libs (embeddings, vector store, LLM, chunking).
#   * ``rag``  -- the application: FastAPI service, DI container, benchmarks, CLI.
# Both are kept deliberately small so swapping any concrete backend (Chroma ->
# Vertex Vector Search, gecko-mock -> real gecko, etc.) is a wiring change only.
packages = ["core", "src/rag"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
# Make both packages importable when running pytest without an editable install.
pythonpath = [".", "src"]
markers = [
    "integration: integration tests (may be slow, download models, etc.)",
    "api: FastAPI route tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::UserWarning:torch.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "core", "tests"]
extend-exclude = ["data", "docs", "graphify-out"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",
]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "SIM117"]
# typer's idiomatic API uses ``typer.Option(...)`` as a default value.
"src/rag/benchmarks/__main__.py" = ["B008"]
"src/rag/cli.py" = ["B008"]
# FastAPI's idiomatic API uses ``Depends(...)`` as a default value.
"src/rag/app/controller/rag_controller.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["build/", "dist/", "graphify-out/", "data/"]
mypy_path = ["src", "."]
namespace_packages = true
